<resources>
    <string name="app_name">Upstox Test</string>
    <string name="ltp">LTP: </string>
    <string name="p_l">P/L:</string>
    <string name="rs_amount">₹ %1$.2f</string>
    <string name="upstox_holding">Upstox Holding</string>
    <string name="profit_amp_loss"><![CDATA[Profit & Loss: ]]></string>
    <string name="current_value">Current Value: </string>
    <string name="total_investment">Total Investment:</string>
    <string name="today_s_profit_loss"><![CDATA[Today\'s profit & Loss]]></string>
</resources>