<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7D1D1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upstox_holding"
        android:padding="12dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@color/magenta_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar"
        app:layout_constraintVertical_bias="1.0"
        tools:itemCount="7"
        tools:listitem="@layout/item_stock" />

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rcv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/magenta" />

    <LinearLayout
        android:id="@+id/bottomTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/upArrow"
            android:layout_gravity="center_horizontal"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_up_arrow"
            app:tint="@color/magenta" />

        <LinearLayout
            android:id="@+id/otherDataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/currentValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/current_value"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="start"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_currentValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rs_amount"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/total_investment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_investment"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="start"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_totalInvestment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rs_amount"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/total_profit_loss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/today_s_profit_loss"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="start"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_today_s_profit_loss"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rs_amount"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="18dp"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profit_amp_loss"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="start"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_totalProfitLoss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="₹ 0.00"
                android:textColor="@color/black"
                android:gravity="end"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>